--- a/index.html
+++ b/index.html
@@ -5,25 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Relaxation Audio File</title>
-    <!--<link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
-    -->
   </head>
   <body>
     <main>
-        <h1>Welcome to My Website</h1>
+        <h1>Welcome</h1>
         <figure>
             <figcaption>Listen to the audio:</figcaption>
             <audio controls src="media/relaxation.mp3"></audio>
             <a href="media/relaxation.mp3"> Download audio </a>
           </figure>
-          <!--
-          <figure>
-            <figcaption>Listen to the wav:</figcaption>
-            <audio controls src="media/relaxation.wav"></audio>
-            <a href="media/relaxation.wav"> Download audio </a>
-          </figure>   
-        -->
     </main>
 	<script src="index.js"></script>
   </body>
